--- a/package.json
+++ b/package.json
@@ -4,19 +4,55 @@
   "private": true,
   "description": "monorepo for react-jsonschema-form and its themes",
   "scripts": {
-    "postinstall": "lerna bootstrap",
     "bootstrap": "lerna bootstrap",
-    "publish": "lerna publish",
     "changed": "lerna changed",
-    "test": "lerna run test",
-    "lint": "lerna run lint",
     "cs-check": "lerna run cs-check",
     "cs-format": "lerna run cs-format",
-    "dist": "lerna run dist"
+    "dist": "lerna run dist",
+    "lint": "eslint playground/; lerna run lint",
+    "postinstall": "lerna bootstrap",
+    "publish": "lerna publish",
+    "start": "webpack-dev-server --open --config webpack.config.js",
+    "test": "lerna run test"
   },
   "dependencies": {
-    "prettier": "^1.18.2",
     "lerna": "^3.18.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/runtime-corejs2": "^7.8.7",
+    "@material-ui/core": "^4.9.5",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "file-loader": "^5.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.1.0",
+    "jss": "^10.0.4",
+    "monaco-editor": "^0.20.0",
+    "monaco-editor-webpack-plugin": "^1.9.0",
+    "react": "^16.13.0",
+    "react-app-polyfill": "^1.0.6",
+    "react-dom": "^16.13.0",
+    "react-frame-component": "^4.1.1",
+    "react-monaco-editor": "^0.34.0",
+    "sass": "^1.26.2",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "prettier": {
     "jsxBracketSameLine": true,
@@ -27,9 +63,6 @@
   },
   "license": "Apache-2.0",
   "homepage": "https://github.com/readmeio/react-jsonschema-form#readme",
-  "devDependencies": {
-    "husky": "^3.1.0"
-  },
   "husky": {
     "hooks": {
       "pre-commit": "lerna run --concurrency 1 --stream precommit"
