--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
     "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js",
-    "cs-check": "prettier -l \"{playground,src,test}/**/*.js\"",
-    "cs-format": "prettier \"{playground,src,test}/**/*.js\" --write",
+    "cs-check": "prettier -l \"{src,test}/**/*.js\"",
+    "cs-format": "prettier \"{src,test}/**/*.js\" --write",
     "dist": "npm run build:lib && npm run build:dist",
-    "lint": "eslint src test playground",
+    "lint": "eslint src test",
     "precommit": "lint-staged",
     "publish-to-npm": "npm run dist && npm publish",
     "preversion": "npm run dist && npm run cs-check && npm run lint",
@@ -19,7 +19,7 @@
     "test-debug": "cross-env NODE_ENV=test mocha --require @babel/register --require ./test/setup-jsdom.js --debug-brk --inspect test/Form_test.js"
   },
   "lint-staged": {
-    "{playground,src,test}/**/*.js": [
+    "{src,test}/**/*.js": [
       "eslint --fix",
       "prettier --write",
       "git add"
@@ -60,7 +60,6 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
-    "@rjsf/playground": "^2.0.0-alpha.2.2",
     "atob": "^2.0.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
@@ -78,7 +77,6 @@
     "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.1",
     "express": "^4.14.0",
-    "gh-pages": "^0.11.0",
     "html": "^1.0.0",
     "husky": "^0.13.2",
     "jsdom": "^8.3.0",
